--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,73 @@
 body {
 	background: #ece7e7;
 }
+#app {
+	position:relative;
+}
+
+#command {
+	position: absolute;
+	top:0;right:0;bottom:0;left:0;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0,0,0,.75);
+
+	&.started {
+		opacity: 0;
+	}
+
+	input {
+		border: 0;
+		background: transparent;
+		width: 100%;
+		padding: 20px;
+		cursor: default;
+	}
+	.content-wrapper {
+		width: 75%;
+		text-align:center;
+		color: white;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: stretch;
+
+		.instructs {
+			display: flex;
+			flex-direction: row;
+			> div {
+				flex: 1 0 0;
+				> div:first-child {
+					display: inline-block;
+					margin: 10px;
+					padding: 5px 10px;
+					text-align: center;
+					font-size: 20px;
+					border: solid 1px white;
+					border-radius: 10px;
+				}
+			}
+		}
+
+		// start
+		> div:last-child {
+			position: relative;
+			&:before {
+				position:absolute;
+				top:0;right:0;bottom:0;left:0;
+				padding: 5px;
+				text-align: center;
+				color: white;
+				font-size: 40px;
+				content: 'Cliquez ici pour commencer.';
+			}
+		}
+	}
+}
+
 .currentPrice {
 	overflow: hidden;
 	flex: 5 0 0;
