--- a/styles/bulma/grid/tiles.sass
+++ b/styles/bulma/grid/tiles.sass
@@ -21,7 +21,7 @@
   &.is-vertical
     flex-direction: column
     & > .tile.is-child:not(:last-child)
-      margin-bottom: 1.5rem !important
+      margin-bottom: .5rem !important
   // Responsiveness
   +tablet
     &:not(.is-child)
